@@ -2,7 +2,7 @@ sl2d (0.4.4~dev-1) unstable; urgency=low
 
   * New upstream release, closes: #3157.
 
- -- Gilles Dartiguelongue <gilles.dartiguelongue@smartjog.com>  Tue, 11 May 2010 19:08:12 +0200
+ -- Rémi Cardona <remi.cardona@smartjog.com>  Fri, 21 May 2010 11:47:43 +0200
 
 sl2d (0.4.3-1) unstable; urgency=low
 
