@@ -3,6 +3,8 @@ Version 0.4.4~dev
 	* Fix RuntimeError due to changing dictionary while iterating over it,
 	  closes: #3157.
 	* Add preliminary support for input parameters, refs: #3168.
+	* Don't open a pipe to ffmpeg's stdin to terminate it, use kill()
+	  directly, refs: #3186.
 
 Version 0.4.3
 
